# AuroraStudio-core

./: README.md
ASCORE/: CMakeLists.txt
ASCORE/include/: ASCore.hpp
ASCORE/src/: ASCore.cpp
